syntax = "proto3";

package org.e2eelab.skissm.proto;

option java_package = "org.e2eelab.skissm.proto";
option java_outer_classname = "CreateGroupRequestPayload";
option java_multiple_files = true;

import "e2ee_address.proto";

message create_group_request_payload {
    e2ee_address sender_address = 1;
    repeated e2ee_address member_addresses = 2;
    bytes group_name = 3;
    e2ee_address group_address = 4;
}